--- a/main-css/main.css
+++ b/main-css/main.css
@@ -113,7 +113,9 @@ button.btn:hover {
   color: #ffffff;
   background: #E47A2E;
   border-color: #E47A2E;
-}/*# sourceMappingURL=main.css.map */*/
+}
+
+/**********************************/
 /********* Top Header CSS *********/
 /**********************************/
 .top-header {
